att elementos do menu

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div id="area-menu">
             <a href="index.html">Home</a>
-            <a href="">Jogos</a>
-            <a href="">Celulares</a>
-            <a href="">Informática</a>
-            <a href="">Eletrônicos</a>
+            <a href="jogos.html">Jogos</a>
+            <a href="celulares.html">Celulares</a>
+            <a href="informatica.html">Informática</a>
+            <a href="eletronicos.html">Eletrônicos</a>
         </div>
 
     </div> <!-- //Fim do cabeçalho-->
@@ -75,11 +75,11 @@
         <div id="menu-lateral">
             <h2>Categorias</h2>
             <div class="nav-lateral">
-                <a href="">Jogos</a><br>
-                <a href="">Celulares</a><br>
-                <a href="">Informática</a><br>
-                <a href="">Eletrônicos</a><br>
-                <a href="">Jogos</a>
+                <a href="jogos.html">Jogos</a><br>
+                <a href="celulares.html">Celulares</a><br>
+                <a href="informatica.html">Informática</a><br>
+                <a href="eletronicos.html">Eletrônicos</a><br>
+                <a href="jogos.html">Jogos</a>
             </div>
         </div>
 
